# Online-Shop

./: .env.local.sample  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
apps/account/: admin.py  authenticate.py  managers.py  models.py  validators.py
apps/account/form_data/: forms.py  serializers.py
apps/account/tests/: test_token.py  tests_models_testcase.py
apps/account/urls/: __init__.py  urls_template.py
apps/account/users_auth/: app_settings.py  authenticate.py  cache.py  client.py  encryption.py  services.py  token.py
apps/core/: admin.py  managers.py  middlewares.py  mixin.py  models.py  otp_sms.py  upload_to_filename.py  validators.py
apps/order/: admin.py  managers.py  mixin.py  models.py
apps/product/: admin.py  managers.py  mixin.py  models.py
config/: celery.py  conf.py  settings.py  urls.py
templates/base/: base.html  footer.html  header.html  messages.html  navbar.html  script.html  search.html
templates/brand/: brand_delete.html
templates/bucket/: bucket.html
templates/category/: categories.html  category_create.html  category_update.html
templates/home/: home.html
templates/http_method/: http_404.html
templates/product/: product_create.html  product_delete.html
templates/warehouse_keeper/: warehouse_keeper_create.html  warehouse_keeper_update.html
utility/: Dockerfile  cache.py  cleaner.sh  otp_sms.py  upload_to_filename.py
utility/bucket/: bucket.py  bucket_views.py  tasks.py  urls.py
utility/certbot/: Dockerfile  certify-init.sh
utility/nginx/: Dockerfile  default-ssl.conf.template  default.conf.template  entrypoint.sh  nginx.conf
(+153 files in other folders)
